tests/baselines/reference/genericGetter2.errors.txt
tests/cases/compiler/genericGetter2.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/genericGetter2.ts(5,14): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericGetter2.ts (2 errors) ====
    class A<T> { }
    
    class C<T> {
        data: A<T>;
        get x(): A {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                 ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
            return this.data;
        }
    }